# devops-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  PROGRESS.md  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
deploy/: aws.md  hosting.md
deploy/eks/: deployment.yaml  ingress.yaml  rbac.yaml
src/devops_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  prompts.py  safety.py  shell.py
src/devops_agent/copilot/: __init__.py  protocol.py  server.py  verify.py
src/devops_agent/tools/: __init__.py  aws.py  base.py  correlation.py  databases.py  datadog.py  grafana.py  helm.py  jenkins.py  k8s_network.py  kafka.py  kexec.py  kubernetes.py  network.py  obs_http.py  prometheus.py  redis.py
tests/: test_agent.py  test_aws.py  test_copilot.py  test_correlation.py  test_jenkins.py  test_k8s_network.py  test_llm.py  test_observability.py  test_prometheus.py  test_safety.py  test_services.py
vscode-extension/: devops-triage-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
